<resources>
    <string name="app_name">SyrianCards</string>
    <string name="notification">notification</string>
    <string name="notif_desc">description</string>
    <string name="last_transactions">Last Transactions</string>
    <string name="see_all">See all</string>
    <string name="last_notifications">Last Notifications</string>
    <string name="balance">Balance</string>
    <string name="dollar">$</string>
    <string name="payment_details">Payment details</string>
    <string name="status">Status</string>
    <string name="status_pending">Pending</string>
    <string name="status_proccessing">Proccessing</string>
    <string name="status_done">Done</string>
    <string name="transaction_id">Transaction id</string>
    <string name="you_requested">You requested</string>
    <string name="date">Date</string>
    <string name="show_recipe">Show recipe</string>
    <string name="my_transactions">My Transactions</string>
    <string name="category">Category</string>
    <string name="choose_card_type">Choose card type</string>
    <string name="choose_card_value">Choose card value</string>
    <string name="expected_result">12900</string>
    <string name="sp">S.p</string>
    <string name="btn_sell">Sell For</string>
    <string name="my_orders">My Orders</string>
    <string name="quantity">4</string>
    <string name="card_name">Card name</string>
    <string name="card_type">Card type</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="missing_fields_message">You have to fill all fields</string>
    <string name="confirm_pass_error">Please make sure that both passwords are the same</string>
    <string name="phone_length_error">Please insert a valid phone number</string>
</resources>