<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".activities.BalanceRequestDetailsActivity">

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="40dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:orientation="horizontal"
        >
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/status_pending"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="16dp"
                android:src="@drawable/ic_request"
                android:background="@drawable/circle_bg_selected"
                android:padding="16dp"
                android:tint="@color/white"
                android:layout_gravity="center">

            </ImageView>
        </FrameLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0.7dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.4"
            android:background="@color/white" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/status_proccessing"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="16dp"
                android:background="@drawable/circle_bg"
                android:layout_gravity="center"
                android:src="@drawable/ic_proccessing"
                android:tint="@color/white"
                android:padding="16dp">

            </ImageView>
        </FrameLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0.7dp"
            android:background="@color/white"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.4"/>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/status_done"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="16dp"
                android:src="@drawable/ic_done"
                android:background="@drawable/circle_bg"
                android:padding="16dp"
                android:tint="@color/white"
                android:layout_gravity="center"/>
        </FrameLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top"
        android:layout_alignParentBottom="true"
        android:background="@drawable/home_below_bg"
        android:paddingStart="25dp"
        android:paddingEnd="25dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:text="@string/payment_details"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:clipToPadding="false"
            app:cardCornerRadius="22dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/status_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="your payment received"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:alpha="0.6"
                    android:textAlignment="center"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/amount_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="1000.00 S.P"
                    android:layout_marginBottom="20dp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="26sp"/>



            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_below="@id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/transaction_id"
                    android:layout_weight="1"
                    android:alpha="0.6"
                    android:textAlignment="viewStart"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="000000"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textAlignment="viewEnd"
                    android:textSize="18sp"/>




            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:layout_weight="1"
                    android:alpha="0.6"
                    android:textAlignment="viewStart"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/status_pending"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textAlignment="viewEnd"
                    android:textSize="18sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/you_requested"
                    android:layout_weight="1"
                    android:alpha="0.6"
                    android:textAlignment="viewStart"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="1000.00 S.P"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textAlignment="viewEnd"
                    android:textSize="18sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:layout_weight="1"
                    android:alpha="0.6"
                    android:textAlignment="viewStart"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="08/09/2021"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textAlignment="viewEnd"
                    android:textSize="18sp"/>

            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/show_recipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/show_recipe"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:background="@drawable/colored_button_bg"
            android:layout_alignParentBottom="true"
            android:layout_margin="16dp"/>


    </RelativeLayout>

</RelativeLayout>